--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,29 +5,30 @@
   "module": "src/index.js",
   "private": true,
   "devDependencies": {
-    "@babel/core": "^7.1.0",
     "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.7.6",
+    "babel-loader": "^8.1.0",
     "circular-dependency-plugin": "^5.2.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
+    "node-sass": "^4.14.0",
     "postcss-loader": "^3.0.0",
     "react-app-polyfill": "^1.0.6",
-    "webpack-hot-middleware": "^2.25.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
-    "style-loader": "^1.2.0",
-    "css-loader": "^3.5.3",
-    "sass-loader": "^8.0.2",
-    "babel-loader": "^8.1.0",
-    "node-sass": "^4.14.0"
+    "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.13.0",
+    "@swim/shared": "^1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hot-loader": "^4.12.20"
