--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,8 +5,8 @@
   "module": "src/index.js",
   "private": true,
   "devDependencies": {
-    "@babel/core": "^7.1.0",
     "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0"
   },
@@ -16,13 +16,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
     "@apollo/react-common": "3.1.3",
     "@apollo/react-hooks": "3.1.3",
     "@apollo/react-ssr": "3.1.3",
+    "@swim/shared": "^1.0.0",
     "apollo-cache-inmemory": "1.6.5",
     "apollo-client": "2.6.8",
     "apollo-link-http": "1.5.16",
@@ -34,6 +31,11 @@
     "graphql": "^14.0.2",
     "graphql-tag": "2.10.1",
     "jsonwebtoken": "8.5.1",
+    "next": "latest",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "styled-components": "^5.1.0",
     "uuid": "3.4.0"
   }
 }
