--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@swim/shared",
   "version": "1.0.0",
+  "module": "src/index.js",
   "main": "dist/index.js",
   "private": true,
   "scripts": {
@@ -11,6 +12,7 @@
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.9.4",
+    "@types/react": "^16.9.34",
     "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
   },
