--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -35,6 +35,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "rebass": "^4.0.7",
     "styled-components": "^5.1.0",
     "uuid": "3.4.0"
   }
