--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "private": true,
   "scripts": {
-    "build": "rimraf dist && tsc"
+    "build": "rimraf dist && tsc -w"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.9.4",
     "@types/react": "^16.9.34",
+    "@types/styled-components": "^5.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
   },
