--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.7.0",
     "rebass": "^4.0.7",
     "styled-components": "^5.1.0",
+    "styled-icons": "^10.2.1",
     "uuid": "3.4.0"
   }
 }
