--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -32,6 +32,7 @@
     "graphql-tag": "2.10.1",
     "jsonwebtoken": "8.5.1",
     "next": "latest",
+    "polished": "^3.5.2",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
