--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -14,7 +14,7 @@ jobs:
     name: Deploy website
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@master
       - name: Install yarn
         run: |
           curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
