--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -7,7 +7,8 @@ name: Web Deployment
 on:
   push:
     paths:
-      - "packages/web/**"    
+      - "packages/web/**"
+      - "packages/shared/**"
 jobs:
   build:
     name: Deploy website
