--- a/packages/web/.babelrc
+++ b/packages/web/.babelrc
@@ -7,7 +7,17 @@
           { "ssr": true, "displayName": true, "preprocess": false }
         ]
       ],
-      "presets": ["next/babel"]
+      "presets": [
+        [
+          "next/babel",
+          {
+            "preset-env": {},
+            "transform-runtime": {},
+            "styled-jsx": {},
+            "class-properties": {}
+          }
+        ]
+      ]
     },
     "production": {
       "plugins": [
@@ -16,7 +26,17 @@
           { "ssr": true, "displayName": true, "preprocess": false }
         ]
       ],
-      "presets": ["next/babel"]
+      "presets": [
+        [
+          "next/babel",
+          {
+            "preset-env": {},
+            "transform-runtime": {},
+            "styled-jsx": {},
+            "class-properties": {}
+          }
+        ]
+      ]
     }
   },
   "plugins": [
