--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -17,13 +17,13 @@ jobs:
       - uses: actions/checkout@master
       - name: Install yarn
         run: |
-          curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-          echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-          sudo apt-get update
-          sudo apt-get install yarn
+          # curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+          # echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+          # sudo apt-get update
+          # sudo apt-get install yarn
 
       - name: install packages
-        run: yarn install
+        # run: yarn install
 
       - name: Run test suite
         run: echo yarn test!
