--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,7 +15,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "deploy": "yarn export && yarn build"
+    "deploy": "npm run build && npm run export"
   },
   "dependencies": {
     "@apollo/react-common": "3.1.3",
