--- a/packages/web/.babelrc
+++ b/packages/web/.babelrc
@@ -1,44 +1,5 @@
 {
-  "env": {
-    "development": {
-      "plugins": [
-        [
-          "styled-components",
-          { "ssr": true, "displayName": true, "preprocess": false }
-        ]
-      ],
-      "presets": [
-        [
-          "next/babel",
-          {
-            "preset-env": {},
-            "transform-runtime": {},
-            "styled-jsx": {},
-            "class-properties": {}
-          }
-        ]
-      ]
-    },
-    "production": {
-      "plugins": [
-        [
-          "styled-components",
-          { "ssr": true, "displayName": true, "preprocess": false }
-        ]
-      ],
-      "presets": [
-        [
-          "next/babel",
-          {
-            "preset-env": {},
-            "transform-runtime": {},
-            "styled-jsx": {},
-            "class-properties": {}
-          }
-        ]
-      ]
-    }
-  },
+  "presets": ["next/babel"],
   "plugins": [
     [
       "styled-components",
