--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,11 +6,11 @@
     "start": "node ./index.js"
   },
   "dependencies": {
-    "@swim/shared": "^1.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
