adds react-ga and analytics

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -39,6 +39,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-ga": "^2.7.0",
     "styled-components": "^5.1.0",
     "styled-icons": "^10.2.1",
     "uuid": "3.4.0"
