form template complete

--- a/packages/web/.env
+++ b/packages/web/.env
@@ -1,1 +1,10 @@
 NODE_PATH=src
+
+FACEBOOK_USERNAME=dppoolserv@gmail.com
+FACEBOOK_PASSWORD=U1djKoDPGdRRQHpB#Fwj6l9Roeh$eRT4qv#pUdT0$&Fftl%JLQz6fvpyQjozdOI6pXlJe7zftO^3ifs&PnOeEiJbfm$QBW^uqb2
+
+GMAIL_USERNAME=dppoolserv@gmail.com
+GMAIL_PASSWORD=U1djKoDPGdRRQHpB#Fwj6l9Roeh$eRT4qv#pUdT0$&Fftl%JLQz6fvpyQjozdOI6pXlJe7zftO^3ifs&PnOeEiJbfm$QBW^uqb2
+
+TWITTER_USERNAME=dppoolserv
+TWITTER_PASSWORD=U1djKoDPGdRRQHpB#Fwj6l9Roeh$eRT4qv#pUdT0$&Fftl%JLQz6fvpyQjozdOI6pXlJe7zftO^3ifs&PnOeEiJbfm$QBW^uqb2
