--- a/packages/server/now.json
+++ b/packages/server/now.json
@@ -3,15 +3,34 @@
   "builds": [{ "src": "index.js", "use": "@now/node-server" }],
   "routes": [
     {
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
+      },
       "src": "/",
       "dest": "/index.js",
       "methods": ["GET"]
     },
     {
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
+      },
       "src": "/users",
       "dest": "/index.js",
       "methods": ["GET"]
     },
-    { "src": "/api/contact", "dest": "/index.js", "methods": ["POST"] }
+    {
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
+      },
+      "src": "/api/contact",
+      "dest": "/index.js",
+      "methods": ["POST"]
+    }
   ]
 }
