--- a/packages/web/.babelrc
+++ b/packages/web/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["next/babel"],
   "plugins": [
     [
-      "styled-components",
+      "babel-plugin-styled-components",
       { "ssr": false, "displayName": true, "preprocess": false }
     ]
   ]
