--- a/packages/server/now.json
+++ b/packages/server/now.json
@@ -1,36 +1,5 @@
 {
   "version": 2,
   "builds": [{ "src": "index.js", "use": "@now/node-server" }],
-  "routes": [
-    {
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
-      },
-      "src": "/",
-      "dest": "/index.js",
-      "methods": ["GET"]
-    },
-    {
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
-      },
-      "src": "/users",
-      "dest": "/index.js",
-      "methods": ["GET"]
-    },
-    {
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
-      },
-      "src": "/api/contact",
-      "dest": "/index.js",
-      "methods": ["POST"]
-    }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "app.js" }]
 }
