--- a/packages/server/now.json
+++ b/packages/server/now.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
+  "headers": {
+    "Access-Control-Allow-Origin": "*",
+    "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+    "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
+  },
   "builds": [{ "src": "index.js", "use": "@now/node-server" }],
   "routes": [{ "src": "/(.*)", "dest": "app.js" }]
 }
