--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,8 +12,10 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "googleapis": "^50.0.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "micro-cors": "^0.1.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.6"
   }
